# serializer version: 1
# name: test_sensor[sensor.river_name_station_name_flood_alarm_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.river_name_station_name_flood_alarm_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Flood alarm level',
    'platform': 'imgw_pib',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'flood_alarm_level',
    'unique_id': '123_flood_alarm_level',
    'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
  })
# ---
# name: test_sensor[sensor.river_name_station_name_flood_alarm_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by IMGW-PIB',
      'device_class': 'distance',
      'friendly_name': 'River Name (Station Name) Flood alarm level',
      'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.river_name_station_name_flood_alarm_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '630.0',
  })
# ---
# name: test_sensor[sensor.river_name_station_name_flood_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.river_name_station_name_flood_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Flood warning level',
    'platform': 'imgw_pib',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'flood_warning_level',
    'unique_id': '123_flood_warning_level',
    'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
  })
# ---
# name: test_sensor[sensor.river_name_station_name_flood_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by IMGW-PIB',
      'device_class': 'distance',
      'friendly_name': 'River Name (Station Name) Flood warning level',
      'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.river_name_station_name_flood_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '590.0',
  })
# ---
# name: test_sensor[sensor.river_name_station_name_water_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.river_name_station_name_water_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Water level',
    'platform': 'imgw_pib',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'water_level',
    'unique_id': '123_water_level',
    'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
  })
# ---
# name: test_sensor[sensor.river_name_station_name_water_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by IMGW-PIB',
      'device_class': 'distance',
      'friendly_name': 'River Name (Station Name) Water level',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.CENTIMETERS: 'cm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.river_name_station_name_water_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '526.0',
  })
# ---
# name: test_sensor[sensor.river_name_station_name_water_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.river_name_station_name_water_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Water temperature',
    'platform': 'imgw_pib',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'water_temperature',
    'unique_id': '123_water_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.river_name_station_name_water_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by IMGW-PIB',
      'device_class': 'temperature',
      'friendly_name': 'River Name (Station Name) Water temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.river_name_station_name_water_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.8',
  })
# ---
